2010-05-05  Daniel Franke  <franke.daniel@gmail.com>

        * resolve.c (traverse_data_list): Rephrase error message for
        non-constant bounds in data-implied-do.

2010-05-05  Daniel Franke  <franke.daniel@gmail.com>

	PR fortran/24978
	* gfortran.h: Removed repeat count from constructor, removed
	all usages.
	* data.h (gfc_assign_data_value_range): Changed return value from
	void to gfc_try.
	* data.c (gfc_assign_data_value): Add location to constructor element.
	(gfc_assign_data_value_range): Call gfc_assign_data_value()
	for each element in range. Return early if an error was generated.
	* resolve.c (check_data_variable): Stop early if range assignment
	generated an error.

2010-05-05  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/43696
	* resolve.c (resolve_fl_derived): Some fixes for class variables.
	* symbol.c (gfc_build_class_symbol): Add separate class container for
	class pointers.

2010-05-03  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/43592
	* fortran/parse.c (parse_interface): Do not dereference a NULL pointer.

2010-05-02  Tobias Burnus  <burnus@net-b.de>

	PR fortran/18918
	* intrinsic.c (add_functions): Fix GFC_STD and add gfc_resolve_ calls
	for lcobound, ucobound, image_index and this_image.
	* intrinsic.h (gfc_resolve_lcobound, gfc_resolve_this_image,
	gfc_resolve_image_index, gfc_resolve_ucobound): New prototypes.
	* iresolve.c (gfc_resolve_lcobound, gfc_resolve_this_image,
	gfc_resolve_image_index, gfc_resolve_ucobound, resolve_bound): New
	functions.
	(gfc_resolve_lbound, gfc_resolve_ubound): Use resolve_bound.

2010-04-30  Tobias Burnus  <burnus@net-b.de>

	PR fortran/18918
	PR fortran/43931
	*  trans-types.c (gfc_get_array_descriptor_base): Fix index
	calculation for array descriptor types.

2010-04-29  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/43896
	* symbol.c (add_proc_component,copy_vtab_proc_comps): Remove
	initializers for PPC members of the vtabs.

2010-04-29  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/42274