@@ -1,3 +1,8 @@
+2010-05-06  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/43985
+	* gfortran.dg/gomp/crayptr5.f90: New test case.
+
 2010-05-05  Jason Merrill  <jason@redhat.com>
 
 	PR debug/43370
